force-app/main/default/objects/Comment__c/fields/Comment_By__c.field-meta.xml
<CustomField>
    <fullName>Comment_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comment By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Comments</relationshipLabel>
    <relationshipName>Comments</relationshipName>
    <type>Lookup</type>
</CustomField>