force-app/main/default/objects/Comment__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replied On</label>
    <referenceTo>Comment__c</referenceTo>
    <relationshipLabel>Comments</relationshipLabel>
    <relationshipName>Comments</relationshipName>
    <type>Lookup</type>
</CustomField>