force-app/main/default/objects/Comment__c/fields/Sample__c.field-meta.xml
<CustomField>
    <fullName>Sample__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sample</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Comments</relationshipLabel>
    <relationshipName>Comments</relationshipName>
    <type>Lookup</type>
</CustomField>