force-app/main/default/objects/Comment__c/fields/Sample_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Sample_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sample Line Item</label>
    <referenceTo>Sample_Line_Item__c</referenceTo>
    <relationshipLabel>Comments</relationshipLabel>
    <relationshipName>Comments</relationshipName>
    <type>Lookup</type>
</CustomField>