force-app/main/default/objects/Comment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Comment__c</columns>
    <columns>Comment_By__c</columns>
    <columns>Comments__c</columns>
    <columns>Reply__c</columns>
    <columns>Account__c</columns>
    <columns>Sample_Line_Item__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>